refactor: use orb instead of sift because sit is removed from opencv

--- a/templates/result.html
+++ b/templates/result.html
@@ -8,7 +8,7 @@
         <img src="/static/input.png" style="width:30%;" alt="result">
         <img src="/static/reference.png" style="width:30%;" alt="result"><br><br>
         <h5>Output Result and Downloadable PDF <button type="submit" onclick="window.open('/static/output.pdf')">Download</button></h3>
-        <img src="/static/output_sift.png" style="width:30%;" alt="result">
+        <img src="/static/output_orb.png" style="width:30%;" alt="result">
 	</div>
 </div>
 
