doc: add badges and replace project name

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </form>
     <hr class="my-4">
     <button class="btn btn-lg btn-outline-info" onclick="window.open('/static/test.zip')"><i class="fas fa-archive"></i> Test Set</button>
-    <a class="btn btn-lg btn-outline-dark" href="https://ronniesong0809.github.io/opencv-scanner" role="button"><i class="fab fa-github"></i> Learn more</a> 
-    <a class="btn btn-lg btn-outline-warning" href="https://github.com/ronniesong0809/opencv-scanner/issues/new" role="button"><i class="fas fa-bug"></i> Submit a bug</a>
+    <a class="btn btn-lg btn-outline-dark" href="https://ronniesong0809.github.io/scanner-webapp" role="button"><i class="fab fa-github"></i> Learn more</a> 
+    <a class="btn btn-lg btn-outline-warning" href="https://github.com/ronniesong0809/scanner-webapp/issues/new" role="button"><i class="fas fa-bug"></i> Submit a bug</a>
 </div>
 {% endblock %}
